frontend_tests/negative/builtin_min_type_mismatch/cmd/app/main.go
package main

func main() {
	var integer int
	var floating float64
	_ = min(integer, floating)
}
